--- a/src/Duelyst/css/css6.css
+++ b/src/Duelyst/css/css6.css
@@ -21,7 +21,7 @@
     -fx-background-radius: 15 15 15 15;
 }
 
-.label {
+#label-account {
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-background-color: rgba(0, 0, 0, 0.6);
@@ -116,8 +116,52 @@
     -fx-border-insets: 2 2 2 2;
     -fx-border-radius: 15 15 15 15;
 }
-#label3 {
-    -fx-font-size: 12pt;
+.label3 {
+    -fx-font-size: 14pt;
     -fx-font-family: Crushed;
     -fx-text-fill: black;
+}
+
+#end-turn:hover {
+    -fx-image: url("button_end_turn_mine_glow.png");
+    -fx-alignment: center;
+}
+
+#end-turn {
+    -fx-image: url("button_end_turn_mine.png");
+    -fx-alignment: center;
+}
+
+#show-log:hover {
+    -fx-image: url("button_primary_right_glow.png");
+    -fx-alignment: center;
+}
+
+#show-log {
+    -fx-image: url("button_primary_right.png");
+    -fx-alignment: center;
+}
+
+#main-menu:hover {
+    -fx-image: url("button_primary_left_glow.png");
+    -fx-alignment: center;
+}
+
+#main-menu {
+    -fx-image: url("button_primary_left.png");
+    -fx-alignment: center;
+}
+
+#menu-text {
+    -fx-font-size: 20px;
+    -fx-text-fill: #ffffff;
+}
+#show-log-text {
+    -fx-font-size: 20px;
+    -fx-text-fill: #ffffff;
+}
+
+#next-turn-text {
+    -fx-font-size: 20px;
+    -fx-text-fill: #ffffff;
 }
