--- a/src/Duelyst/Controller/shopMenu.fxml
+++ b/src/Duelyst/Controller/shopMenu.fxml
@@ -383,16 +383,31 @@
             </GridPane>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0"/>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0"/>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0"/>
-                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0"/>
+
                 </columnConstraints>
                 <rowConstraints>
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 </rowConstraints>
                 <children>
+                    <Button fx:id="button8" id="button8" mnemonicParsing="false" onMouseEntered="#createBtnActFocus"
+                            onKeyPressed="#handleOnKeyPressedCreate" onMouseClicked="#CreateBtnAct" prefHeight="50.0"
+                            prefWidth="400.0"
+                            text="CREATE" GridPane.columnIndex="0">
+                        <GridPane.margin>
+                            <Insets left="10.0" right="10.0"/>
+                        </GridPane.margin>
+                        <graphic>
+                            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="Duelyst/css/createWhite.png"/>
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
                     <Button fx:id="button5" id="button5" mnemonicParsing="false" onMouseEntered="#buyBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedBuy" onMouseClicked="#buyBtnAct" prefHeight="50.0"
                             prefWidth="400.0"
