--- a/src/Duelyst/Controller/collectionMenu.fxml
+++ b/src/Duelyst/Controller/collectionMenu.fxml
@@ -43,10 +43,10 @@
                 <children>
                     <Button fx:id="addButton" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-add"
                             mnemonicParsing="false" onMouseClicked="#addBtnAct"
-                            onMouseEntered="#addBtnActFocus" GridPane.columnIndex="1"
+                            onMouseEntered="#addBtnActFocus" GridPane.columnIndex="3"
                             onKeyPressed="#handleOnKeyPressedAdd" prefHeight="90.0" prefWidth="90.0">
                         <GridPane.margin>
-                            <Insets left="10.0" right="10.0"/>
+                            <Insets left="5.0" right="5.0"/>
                         </GridPane.margin>
                         <graphic>
                             <ImageView fx:id="addImage" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
@@ -61,7 +61,35 @@
                             onMouseEntered="#mainMenuBtnActFocus" GridPane.columnIndex="0"
                             onKeyPressed="#handleOnKeyPressedMainMenu" prefHeight="90.0" prefWidth="90.0">
                         <GridPane.margin>
-                            <Insets left="10.0" right="10.0"/>
+                            <Insets left="5.0" right="5.0"/>
+                        </GridPane.margin>
+                        <graphic>
+                            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="Duelyst/css/mainMenuWhite.png"/>
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="importDeck" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-ex"
+                            mnemonicParsing="false" onMouseClicked="#importAct" onMouseEntered="#importBtnActFocus"
+                            GridPane.columnIndex="1" onKeyPressed="#handleOnKeyPressedImport" prefHeight="90.0" prefWidth="90.0">
+                        <GridPane.margin>
+                            <Insets left="5.0" right="5.0"/>
+                        </GridPane.margin>
+                        <graphic>
+                            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="Duelyst/css/mainMenuWhite.png"/>
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="exportDeck" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-im"
+                            mnemonicParsing="false" onMouseClicked="#exportAct" onMouseEntered="#exportBtnActFocus"
+                            GridPane.columnIndex="2" onKeyPressed="#handleOnKeyPressedExport" prefHeight="90.0" prefWidth="90.0">
+                        <GridPane.margin>
+                            <Insets left="5.0" right="5.0"/>
                         </GridPane.margin>
                         <graphic>
                             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
