--- a/src/Duelyst/Controller/collectionMenu.fxml
+++ b/src/Duelyst/Controller/collectionMenu.fxml
@@ -71,7 +71,7 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button fx:id="importDeck" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-ex"
+                    <Button fx:id="importDeck" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-IM"
                             mnemonicParsing="false" onMouseClicked="#importAct" onMouseEntered="#importBtnActFocus"
                             GridPane.columnIndex="1" onKeyPressed="#handleOnKeyPressedImport" prefHeight="90.0" prefWidth="90.0">
                         <GridPane.margin>
@@ -80,12 +80,12 @@
                         <graphic>
                             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
-                                    <Image url="Duelyst/css/mainMenuWhite.png"/>
+                                    <Image url="Duelyst/css/importWhite.png"/>
                                 </image>
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button fx:id="exportDeck" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-im"
+                    <Button fx:id="exportDeck" GridPane.halignment="CENTER" GridPane.valignment="CENTER" id="button-EX"
                             mnemonicParsing="false" onMouseClicked="#exportAct" onMouseEntered="#exportBtnActFocus"
                             GridPane.columnIndex="2" onKeyPressed="#handleOnKeyPressedExport" prefHeight="90.0" prefWidth="90.0">
                         <GridPane.margin>
@@ -94,7 +94,7 @@
                         <graphic>
                             <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                 <image>
-                                    <Image url="Duelyst/css/mainMenuWhite.png"/>
+                                    <Image url="Duelyst/css/exportWhite.png"/>
                                 </image>
                             </ImageView>
                         </graphic>
