--- a/src/DuelystClient/css/css5.css
+++ b/src/DuelystClient/css/css5.css
@@ -44,12 +44,15 @@
 #button3:focused {
     -fx-graphic: url("mainMenuBlack.png");
 }
+
 #button4:focused {
     -fx-graphic: url("1Black.png");
 }
+
 #button5:focused {
     -fx-graphic: url("2Black.png");
 }
+
 #button6:focused {
     -fx-graphic: url("3Black.png");
 }
@@ -58,4 +61,16 @@
     -fx-background-color: #8F5681;
     -fx-translate-y: 4px;
     -fx-text-fill: black;
+}
+
+
+#textArea {
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-background-color: rgba(255, 217, 50, 0.62);
+    -fx-font-size: 20pt;
+    -fx-font-family: Crushed;
+    -fx-background-radius: 15 15 15 15;
+    -fx-border-radius: 15 15 15 15;
+
 }
