--- a/src/DuelystClient/css/css2.css
+++ b/src/DuelystClient/css/css2.css
@@ -58,9 +58,12 @@
 }
 
 #button5:focused {
-    -fx-graphic: url("logoutBlack.png");
+    -fx-graphic: url("saveBlack.png");
 }
 
+#button6:focused {
+    -fx-graphic: url("logoutBlack.png");
+}
 
 .button:pressed {
     -fx-background-color: rgba(181, 56, 80, 0.75);
