--- a/src/DuelystClient/css/css4.css
+++ b/src/DuelystClient/css/css4.css
@@ -65,6 +65,9 @@
     -fx-graphic: url("itemBlack.png");
 }
 
+#auction:focused {
+    -fx-graphic: url("auction.png");
+}
 #button-add:focused {
     -fx-graphic: url("addBlack.png");
 
