--- a/src/DuelystClient/Controller/collectionMenu.fxml
+++ b/src/DuelystClient/Controller/collectionMenu.fxml
@@ -387,11 +387,26 @@
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                 </columnConstraints>
                 <rowConstraints>
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 </rowConstraints>
                 <children>
+                    <Button GridPane.columnIndex="4" fx:id="auction" id="auction" mnemonicParsing="false" onMouseClicked="#auctionClicked"
+                            onMouseEntered="#auctionBtnActFocus"
+                            onKeyPressed="#handleOnKeyPressedAuction" prefHeight="50.0" prefWidth="300.0">
+                        <GridPane.margin>
+                            <Insets left="10.0" right="10.0"/>
+                        </GridPane.margin>
+                        <graphic>
+                            <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                <image>
+                                    <Image url="DuelystClient/css/auction.png"/>
+                                </image>
+                            </ImageView>
+                        </graphic>
+                    </Button>
                     <Button fx:id="button1" id="button1" mnemonicParsing="false" onMouseClicked="#showHeroes"
                             onMouseEntered="#heroesBtnActFocus"
                             onKeyPressed="#handleOnKeyPressedHeroes" prefHeight="50.0" prefWidth="300.0">
